--- a/server/server/mainwindow.ui
+++ b/server/server/mainwindow.ui
@@ -98,9 +98,16 @@
     <addaction name="separator"/>
     <addaction name="actionall_Breakpoint_s_OFF"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Hel&amp;p</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuDatei"/>
    <addaction name="menuAnsicht"/>
    <addaction name="menuEinstellung"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -173,6 +180,11 @@
   <action name="actionall_Breakpoint_s_OFF">
    <property name="text">
     <string>all &amp;Breakpoint's OFF</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
