Menu: Ansicht/OpenCV Version new

--- a/server/server/mainwindow.ui
+++ b/server/server/mainwindow.ui
@@ -127,6 +127,8 @@
     <addaction name="actionAlle_Fenster_schli_en"/>
     <addaction name="actionBaumstruktur_zuklappen"/>
     <addaction name="actionSource_Window_schlie_en"/>
+    <addaction name="separator"/>
+    <addaction name="actionOpenCv_Version"/>
    </widget>
    <widget class="QMenu" name="menuEinstellung">
     <property name="title">
@@ -234,6 +236,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionOpenCv_Version">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>OpenCV Version</string>
    </property>
   </action>
  </widget>
